--- a/index.html
+++ b/index.html
@@ -460,8 +460,7 @@
                             <br>
                             <br>
                             <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1Ahg2Gzz8oLBs495N4PT9a1fszNBcJUB9/view?usp=sharing"
-                               target="_blank" class="btn btn-round p-2"
-                               style="background: white;color: #ff9800;box-shadow: none"
+                               target="_blank" class="btn btn-round p-2 certificate-button"
                                data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Certificate Link</em></strong>"
                             >Certificate Link</a>
                         </div>
@@ -485,8 +484,7 @@
                                 <br>
                                 <br>
                                 <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1lSc9it--0LooJpp6A7riggSFZPVq2vn6/view?usp=sharing"
-                                   target="_blank" class="btn btn-round p-2"
-                                   style="background: white;color: #ff9800;box-shadow: none"
+                                   target="_blank" class="btn btn-round p-2 certificate-button"
                                    data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Certificate Link</em></strong>"
                                 >Certificate Link</a>
                             </div>
@@ -509,8 +507,7 @@
                             <br>
                             <br>
                             <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1lZmX1wmZLo8ksY6NsrFM9cNfL8HWdMBn/view?usp=sharing"
-                               target="_blank" class="btn btn-round p-2"
-                               style="background: white;color: #ff9800;box-shadow: none"
+                               target="_blank" class="btn btn-round p-2 certificate-button"
                                data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Certificate Link</em></strong>"
                             >Certificate Link</a>
                         </div>
@@ -534,8 +531,7 @@
                             <br>
                             <br>
                             <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/12THg9_3-KtjSRe7pLfw27_pqwkDtSQMx/view?usp=sharing"
-                               target="_blank" class="btn btn-round p-2"
-                               style="background: white;color: #ff9800;box-shadow: none"
+                               target="_blank" class="btn btn-round p-2 certificate-button"
                                data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Certificate Link</em></strong>"
                             >Certificate Link</a>
                         </div>
@@ -558,8 +554,7 @@
                                 <br>
                                 <br>
                                 <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1AdmAM40vQ_mfzz7pVUcUea2S38E6Epuz/view?usp=sharing"
-                                   target="_blank" class="btn btn-round p-2"
-                                   style="background: white;color: #ff9800;box-shadow: none"
+                                   target="_blank" class="btn btn-round p-2 certificate-button"
                                    data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Certificate Link</em></strong>"
                                 >Certificate Link</a>
                             </div>
@@ -583,8 +578,7 @@
                         <br>
                         <br>
                         <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1FWIJ_NTA7Z31eIX7qBIlUnnottfjGsWf/view?usp=sharing"
-                           target="_blank" class="btn btn-round p-2"
-                           style="background: white;color: #ff9800;box-shadow: none"
+                           target="_blank" class="btn btn-round p-2 certificate-button"
                            data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Certificate Link</em></strong>"
                         >Certificate Link</a>
                     </div>
@@ -649,7 +643,7 @@
                     </div>
                     <div class="contact-details">
                         <p class="mb-0" >
-                            <a rel="noreferrer" target="_blank" style="color: white;font-size: 16px" href="http://maps.google.com/?q=Ghaziabad,Uttar+Pradesh">Ghaziabad, Uttar Pradesh, India</a>
+                            <a rel="noreferrer" target="_blank" class="contact-links" href="http://maps.google.com/?q=Ghaziabad,Uttar+Pradesh">Ghaziabad, Uttar Pradesh, India</a>
                         </p>
                     </div>
                 </div>
@@ -663,10 +657,10 @@
                     </div>
                     <div class="contact-details">
                         <p class="mb-1">
-                            <a rel="noreferrer" aria-label="image" href="tel:+91-8377838183" style="color: white;font-size: 16px">+91-8377838183</a>
+                            <a rel="noreferrer" aria-label="image" href="tel:+91-8377838183" class="contact-links">+91-8377838183</a>
                         </p>
                         <p class="mb-1">
-                            <a rel="noreferrer" aria-label="image" href="tel:+91-8076331756" style="color: white;font-size: 16px">+91-8076331756</a>
+                            <a rel="noreferrer" aria-label="image" href="tel:+91-8076331756" class="contact-links">+91-8076331756</a>
                         </p>
                     </div>
                 </div>
@@ -679,7 +673,7 @@
                         <i class="far fa-envelope text-custom h3"></i>
                     </div>
                     <div class="contact-details">
-                        <p class="mb-0"><a rel="noreferrer" aria-label="image" href="mailto: jgoel92@gmail.com" style="color: white;font-size: 16px">jgoel92@gmail.com</a></p>
+                        <p class="mb-0"><a rel="noreferrer" aria-label="image" href="mailto: jgoel92@gmail.com" class="contact-links">jgoel92@gmail.com</a></p>
                     </div>
                 </div>
             </div>
@@ -742,7 +736,7 @@
             </div>
         </div>
     </div>
-    <p class="copyright-desc text-white mb-0 h6 mt-2" style="background-color: #242a35;text-align: center;padding: 12px 0">Designed with <i class="fas fa-heart text-danger"></i> By Jayant Goel</p>
+    <p class="copyright-desc text-white mb-0 h6 mt-2">Designed with <i class="fas fa-heart text-danger"></i> By Jayant Goel</p>
 </footer>
 <!-- footer end -->
 
