--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
-                            <em> This course covered all the intuitions and theoretical aspects of Machine Learning and Data Science which included all the types of classifications, regression, Neural Network etc. </em>
+                            <em> This course covered all the intuitions and theoretical aspects of Machine Learning and Data Science which included all the types of visualisation, analysis etc. </em>
                             <br>
                             <br>
                             <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1lZmX1wmZLo8ksY6NsrFM9cNfL8HWdMBn/view?usp=sharing"
@@ -527,7 +527,7 @@
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
-                            <em>Complete Web Development course which focused on both Front and Back-end Development, with an emphasis on the MEAN Stack.</em>
+                            <em>Complete Web Development course which focused on both Front and Back-end Development, starting with HTML, CSS, JavaScript to MEAN Stack Development</em>
                             <br>
                             <br>
                             <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/12THg9_3-KtjSRe7pLfw27_pqwkDtSQMx/view?usp=sharing"
