--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <p class="text-muted">
                                 An Enthusiast Coder Eager to contribute to team success through hard work, skills, attention to details and excellent organizational skills.
                                 Currently Exploring the world of Technology as SDE Intern at Talent Decrypt and as a Third year student at Jaypee Institute Of Information Technology.
-                                <br>Recently worked as Android Developer At Theatron for 7 months.
+                                <br>Formerly worked as Android Developer At Theatron for 8 months.
                             </p>
                             <p class="text-muted"><strong>IDE & Editors Used</strong> : Android Studio, Intellij, PyCharm , WebStorm, CLion, PHPStorm, Anaconda Navigator, Atom, Python 3.8, BlueJ, CodeBlocks </p>
                         </div>
