--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 </section>
 
 <section class="section pointer" id="trainings">
-    <img src="images/footer-cloud.webp" class="cloud-bg" alt="Footer">
+    <img src="images/footer-cloud.svg" class="cloud-bg" alt="Footer">
     <div class="container z-index">
         <div class="row justify-content-center txt-bg txt-bg-training">
             <div class="col-lg-6">
