--- a/index.html
+++ b/index.html
@@ -431,6 +431,35 @@
 <section class="section pointer" id="trainings">
     <img src="images/footer-cloud.svg" class="cloud-bg" alt="Footer">
     <div class="container z-index">
+        <!--            ################-->
+        <div style="width: 175px;" class="position-relative mb-6 mx-auto mx-md-0">
+
+            <div class="codespaces-sun position-relative circle">
+                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
+                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
+                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
+                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
+                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
+                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
+                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
+                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
+                <div class="codespaces-sun-circle z-2 circle position-absolute top-0 left-0 height-full width-full"></div>
+                <div class="codespaces-sun-circle-night z-2 circle position-absolute top-0 left-0 height-full width-full"></div>
+            </div>
+
+            <div class="codespaces-develop-time codespaces-develop-time-1 circle overflow-hidden position-absolute" style="left: 66px; top: -10px;"></div>
+            <div class="codespaces-develop-time codespaces-develop-time-2 circle overflow-hidden position-absolute" style="left: 88px; top: -20px;"></div>
+            <div class="codespaces-develop-time codespaces-develop-time-3 circle overflow-hidden position-absolute" style="left: 110px; top: -10px;"></div>
+
+            <div class="codespaces-moon position-absolute top-0">
+                <div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>
+                <div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>
+                <div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>
+                <img src="images/moon-dark.svg" alt="Moon" class="codespaces-moon-svg-dark position-absolute z-2" />
+                <img src="images/moon.svg" alt="Moon" class="codespaces-moon-svg position-absolute z-2" />
+            </div>
+        </div>
+        <!--            $$$$$$$$$$$$$$-->
         <div class="row justify-content-center txt-bg txt-bg-training">
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
