--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en" class="no-js" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -428,12 +428,11 @@
     </div>
 </section>
 
-<section class="section pointer" id="trainings">
-    <img src="images/footer-cloud.svg" class="cloud-bg" alt="Footer">
+<section class="js-section-codespaces-develop section pointer section-codespaces-develop position-relative overflow-hidden z-3" id="trainings">
+    <div class="codespaces-develop-bg position-absolute top-0 left-0 width-full height-full"></div>
+    <img src="images/footer-cloud.svg" class="codespaces-develop-cloud position-absolute bottom-0" alt="Footer">
     <div class="container z-index">
-        <!--            ################-->
         <div style="width: 175px;" class="position-relative mb-6 mx-auto mx-md-0">
-
             <div class="codespaces-sun position-relative circle">
                 <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
                 <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>
@@ -459,7 +458,6 @@
                 <img src="images/moon.svg" alt="Moon" class="codespaces-moon-svg position-absolute z-2" />
             </div>
         </div>
-        <!--            $$$$$$$$$$$$$$-->
         <div class="row justify-content-center txt-bg txt-bg-training">
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
@@ -781,6 +779,8 @@
 <script src="js/particles.min.js"></script>
 <script src="js/vanilla-tilt.min.js"></script>
 <script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
+<script src="js/dark-light-theme.js"></script>
+
 <script src="app.js"></script>
 </body>
 </html>
