--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
 <script src="js/particles.min.js"></script>
 <script src="js/vanilla-tilt.min.js"></script>
 <script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
-<script src="js/dark-light-theme.js"></script>
+<script src="js/dark-light-theme.min.js"></script>
 
 <script src="app.js"></script>
 </body>
