--- a/index.html
+++ b/index.html
@@ -464,14 +464,14 @@
                     <div class="mb-5 pb-3">
                         <i class="fas fa-infinity h1 text-muted"></i>
                     </div>
-                    <div class="h3 font-weight-bold">My Training</div>
+                    <div class="h3 font-weight-bold" id="my-training">My Training</div>
                     <p class="text-muted mx-auto mb-0 mt-4 para-desc">Certifications and Work Profile</p>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-4">
-                <div class="services-flip-box mt-4 pt-2">
+                <div class="services-flip-box mt-4 pt-2 services-flip-box-dark-theme">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
                             <div class="h5 font-weight-bold mb-3">Theatron</div>
