--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         </div>
         <div class="row">
             <div class="col-lg-4">
-                <div class="services-flip-box mt-4 pt-2 services-flip-box-dark-theme">
+                <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
                             <div class="h5 font-weight-bold mb-3">Theatron</div>
