--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.min.css" />
     <link rel="stylesheet" type="text/css" href="css/colors/default.css" id="color-opt" />
 
 </head>
@@ -765,7 +765,6 @@
     </div>
     <p class="copyright-desc text-white mb-0 h6 mt-2">Designed with <i class="fas fa-heart text-danger"></i> By Jayant Goel</p>
 </footer>
-<!-- footer end -->
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
