--- a/index.html
+++ b/index.html
@@ -780,6 +780,6 @@
 <script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
 <script src="js/dark-light-theme.min.js"></script>
 
-<script src="app.js"></script>
+<script src="app.min.js"></script>
 </body>
 </html>
