--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001" />
     <meta name="author" content="Jayant Goel" />
 
-    <meta property="og:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.jpg?raw=true"/>
+    <meta property="og:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.png?raw=true"/>
     <meta property="og:title" content="Jayant Goel"/>
     <meta property="og:description" content="Jayant Goel Personal Portfolio ♠ " />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jayant Goel" />
     <meta name="twitter:description" content="Jayant Goel Personal Portfolio ♠ "/>
-    <meta name="twitter:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/bgimg.jpg?raw=true"/>
+    <meta name="twitter:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/bgimg.webp?raw=true"/>
 
     <title>Jayant Goel ♠ </title>
     <link rel="shortcut icon" href="images/favicon.ico">
