--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001" />
     <meta name="author" content="Jayant Goel" />
 
-    <meta property="og:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.png?raw=true"/>
+    <meta property="og:image" content="https://jayantgoel001.github.io/images/Profile-pic.webp"/>
     <meta property="og:title" content="Jayant Goel"/>
     <meta property="og:description" content="Jayant Goel Personal Portfolio ♠ " />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
