--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta property="og:description" content="Jayant Goel Personal Portfolio ♠ " />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
     <meta property="og:type" content="website" />
+    <meta property="fb:app_id" content="1145054172578219"/>
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jayant Goel" />
