--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="manifest" href="manifest.json"/>
-    <base href="/">
+<!--    <base href="/">-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Jayant Goel Personal Portfolio ♠ " />
@@ -323,7 +323,7 @@
         </div>
 
         <div class="row container-grid projects-wrapper mt-4 pt-2">
-            <div class="col-lg-4 spacing branding designing development">
+            <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="home" href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/aiicb.webp" alt="1" width="1030" height="800"/>
@@ -340,7 +340,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4 spacing branding designing development">
+            <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="home" href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/aimg.webp" alt="1" width="1030" height="800" />
@@ -356,8 +356,7 @@
                     </a>
                 </div>
             </div>
-
-            <div class="col-lg-4 spacing branding designing development">
+            <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="home" href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/sda.webp" alt="1" width="1030" height="800" />
@@ -372,8 +371,7 @@
                     </a>
                 </div>
             </div>
-
-            <div class="col-lg-4 spacing branding designing development">
+            <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="image" href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/asm.webp" alt="1" width="1030" height="800" />
@@ -390,7 +388,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4 spacing branding designing development">
+            <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="image" href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/ecs.webp" alt="1" width="1030" height="800" />
@@ -405,7 +403,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-4 spacing branding designing development">
+            <div class="col-lg-4 spacing">
                 <div class="item-box m-2">
                     <a rel="noreferrer" aria-label="image" href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/us.webp" alt="1" width="1030" height="800" />
