--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="manifest" href="manifest.json"/>
-<!--    <base href="/">-->
+    <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Jayant Goel Personal Portfolio ♠ " />
