--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <link rel="manifest" href="manifest.json"/>
+    <link rel="apple-touch-icon" href="images/Profile-pic.png">
+    <meta name="theme-color" content="#242a35"/>
+
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
