--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <div class="h5 font-weight-bold mb-3">Python Bootcamp 2020 Build 15 Working Applications And Games </div>
+                            <div class="h5 font-weight-bold mb-3">Python Bootcamp Build 15 Working Applications And Games</div>
                             <p class="text-muted mb-0">Online Training - Udemy</p>
                             <p class="text-muted mb-0">15 Oct, 2020 - 27 Dec, 2020</p>
                         </div>
@@ -590,7 +590,7 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <div class="h5 font-weight-bold mb-3">Data Structure and Algorithm With Java Bootcamp</div>
+                            <div class="h5 font-weight-bold mb-3">Data Structure and Algorithm With Java</div>
                             <p class="text-muted mb-0">Bootcamp - Code For Cause</p>
                             <p class="text-muted mb-0">29 Aug, 2020 - 19 Sept, 2020</p>
                         </div>
