--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <div class="h5 font-weight-bold mb-3">The Complete 2020 Web Developer Master Course</div>
+                            <div class="h5 font-weight-bold mb-3">Complete Web Developer Master Course</div>
                             <p class="text-muted mb-0"> Online Training - Udemy </p>
                             <p class="text-muted mb-0"> 1 July, 2020 - 25 Aug, 2020 </p>
                         </div>
@@ -566,7 +566,7 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <div class="h5 font-weight-bold mb-3">Python Bootcamp Build 15 Working Applications And Games</div>
+                            <div class="h5 font-weight-bold mb-3">Python Bootcamp</div>
                             <p class="text-muted mb-0">Online Training - Udemy</p>
                             <p class="text-muted mb-0">15 Oct, 2020 - 27 Dec, 2020</p>
                         </div>
@@ -574,7 +574,7 @@
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
                             <div class="services-icon">
-                                <em>The bootcamp served as a window for me for the Advanced Python course, as I had already done Python and it helped me to start applying my knowledge in more Advance and GUI Part.</em>
+                                <em>Python bootcamp served as a window for me for the Advanced Python Developer, as it helped me to start applying my knowledge in more Advance and GUI Part.</em>
                                 <br>
                                 <br>
                                 <a rel="noreferrer" aria-label="image" href="https://drive.google.com/file/d/1AdmAM40vQ_mfzz7pVUcUea2S38E6Epuz/view?usp=sharing"
@@ -590,7 +590,7 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <div class="h5 font-weight-bold mb-3">Data Structure and Algorithm With Java</div>
+                            <div class="h5 font-weight-bold mb-3">DSA With Java</div>
                             <p class="text-muted mb-0">Bootcamp - Code For Cause</p>
                             <p class="text-muted mb-0">29 Aug, 2020 - 19 Sept, 2020</p>
                         </div>
