--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                 <div class="services-flip-box mt-4 pt-1">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <div class="h5 font-weight-bold mb-3">Android Development Using Kotlin </div>
+                            <div class="h5 font-weight-bold mb-3">Android Development </div>
                             <p class="text-muted mb-0">Classroom Training - Coding Blocks</p>
                             <p class="text-muted mb-0">21 Aug, 2019 - 17 Dec, 2019</p>
                         </div>
