--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
                             <em>
-                                Theatron is platform which provides environment of entertainment for which I created An Android Application using Kotlin with Firebase as Backend and Deployed It On Play Store.
+                                Theatron is an entertainment Android Application which I created using Kotlin with Firebase as Backend and Deployed It On Play Store.
                             </em>
                             <br>
                             <br>
