--- a/index.html
+++ b/index.html
@@ -771,6 +771,6 @@
 <script async src="js/vanilla-tilt.min.js"></script>
 <script async src="js/dark-light-theme.min.js"></script>
 
-<script async src="app.min.js"></script>
+<script src="app.min.js"></script>
 </body>
 </html>
