--- a/index.html
+++ b/index.html
@@ -764,13 +764,13 @@
 <script async src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
 <script async src="js/bootstrap.bundle.min.js"></script>
 <script async src="js/jquery.easing.min.js"></script>
-<script async src="js/scrollspy.min.js"></script>
 <script async src="js/typed.min.js"></script>
 <script async src="js/typed.init.js"></script>
 <script async src="js/dark-light-theme.min.js"></script>
+
+<script src="js/scrollspy.min.js"></script>
 <script src="js/particles.min.js"></script>
 <script src="js/vanilla-tilt.min.js"></script>
-
 <script src="app.min.js"></script>
 </body>
 </html>
