--- a/index.html
+++ b/index.html
@@ -763,11 +763,11 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script async src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
 <script async src="js/bootstrap.bundle.min.js"></script>
-<script async src="js/jquery.easing.min.js"></script>
 <script async src="js/typed.min.js"></script>
 <script async src="js/typed.init.js"></script>
 <script async src="js/dark-light-theme.min.js"></script>
 
+<script src="js/jquery.easing.min.js"></script>
 <script src="js/scrollspy.min.js"></script>
 <script src="js/particles.min.js"></script>
 <script src="js/vanilla-tilt.min.js"></script>
