--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script async src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/typed.min.js"></script>
 <script src="js/typed.init.js"></script>
