--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Jayant Goel ♠ </title>
     <meta name="description" content="Jayant Goel Personal Portfolio ♠ " />
+    <link rel="fluid-icon" href="https://jayantgoel001.github.io/images/Profile-pic.png" title="Personal Portfolio">
     <meta name="DC.title" content="Jayant Goel" />
     <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001" />
     <meta name="author" content="Jayant Goel" />
 
-    <meta property="og:image" content="https://jayantgoel001.github.io/images/Profile-pic.webp"/>
+    <meta property="og:image" content="https://jayantgoel001.github.io/images/Profile-pic.png"/>
     <meta property="og:title" content="Jayant Goel"/>
     <meta property="og:description" content="Jayant Goel Personal Portfolio ♠ " />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
@@ -24,10 +27,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jayant Goel" />
     <meta name="twitter:description" content="Jayant Goel Personal Portfolio ♠ "/>
-    <meta name="twitter:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/bgimg.webp?raw=true"/>
+    <meta name="twitter:image" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
 
-    <title>Jayant Goel ♠ </title>
     <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="icon" href="images/Profile-pic.png">
 
     <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
 
