--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     <meta name="author" content="Jayant Goel" />
 
     <meta property="og:image" content="https://jayantgoel001.github.io/images/Profile-pic.png"/>
-    <meta property="og:title" content="Jayant Goel"/>
+    <meta property="og:title" content="Jayant Goel ♠ "/>
     <meta property="og:description" content="Jayant Goel Personal Portfolio ♠ " />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
     <meta property="og:type" content="website" />
     <meta property="fb:app_id" content="1145054172578219"/>
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Jayant Goel" />
+    <meta name="twitter:title" content="Jayant Goel ♠ " />
     <meta name="twitter:description" content="Jayant Goel Personal Portfolio ♠ "/>
     <meta name="twitter:image" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
 
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/Profile-pic.png">
 
     <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
