--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:image" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/Profile-pic.png">
+    <link rel="icon" href="images/favicon.ico">
 
     <meta name="google-site-verification" content="0muao767XOQs7xHi8v20pMOdR-0_csUTDfQ-5AJkbho" />
 
