--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Jayant Goel ♠ </title>
+    <title>Jayant Goel </title>
     <meta name="DC.title" content="Jayant Goel" />
-    <meta name="description" content="Jayant Goel Personal Portfolio ♠ " />
+    <meta name="description" content="Jayant Goel Personal Portfolio" />
     <link rel="fluid-icon" href="https://jayantgoel001.github.io/images/Profile-pic.png" title="Personal Portfolio">
     <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001" />
     <meta name="author" content="Jayant Goel" />
 
-    <meta property="og:title" content="Jayant Goel ♠ "/>
-    <meta property="og:description" content="Jayant Goel Personal Portfolio ♠ " />
+    <meta property="og:title" content="Jayant Goel"/>
+    <meta property="og:description" content="Jayant Goel Personal Portfolio " />
     <meta property="og:url" content="https://jayantgoel001.github.io" />
     <meta property="og:image" content="https://jayantgoel001.github.io/images/Profile-pic.png"/>
     <meta property="og:type" content="website" />
 
     <meta property="fb:app_id" content="1145054172578219"/>
 
-    <meta name="twitter:title" content="Jayant Goel ♠ " />
-    <meta name="twitter:description" content="Jayant Goel Personal Portfolio ♠ "/>
+    <meta name="twitter:title" content="Jayant Goel" />
+    <meta name="twitter:description" content="Jayant Goel Personal Portfolio"/>
     <meta name="twitter:image" content="https://jayantgoel001.github.io/images/bgimg.webp"/>
     <meta name="twitter:card" content="summary_large_image" />
 
