--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="col-lg-12 mt-4 pt-2">
             <div>
-                <ul class="nav nav-tabs nav-fill" id="myTab">
+                <ul class="nav nav-tabs nav-fill" id="myTab" role="list">
                     <li class="nav-item" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>About</em></strong>">
                         <a rel="noreferrer" aria-label="home" class="nav-link active" id="story-tab" data-toggle="tab" href="#story" role="tab" aria-controls="story" aria-selected="true">About</a>
                     </li>
