--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
             <div>
                 <ul class="nav nav-tabs nav-fill" id="myTab">
                     <li class="nav-item" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>About</em></strong>">
-                        <a rel="noreferrer" aria-label="home" class="nav-link active" id="story-tab" data-toggle="tab" href="#story" aria-controls="story" aria-selected="true">About</a>
+                        <a rel="noreferrer" class="nav-link active" id="story-tab" data-toggle="tab" href="#story" >About</a>
                     </li>
                     <li class="nav-item" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Skill</em></strong>">
-                        <a rel="noreferrer" aria-label="home" class="nav-link" id="skill-tab" data-toggle="tab" href="#skill" aria-controls="skill" aria-selected="false">Skill</a>
+                        <a rel="noreferrer" class="nav-link" id="skill-tab" data-toggle="tab" href="#skill">Skill</a>
                     </li>
                     <li class="nav-item" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Education</em></strong>">
-                        <a rel="noreferrer" aria-label="home" class="nav-link" id="resume-tab" data-toggle="tab" href="#resume" aria-controls="resume" aria-selected="false">Education</a>
+                        <a rel="noreferrer" class="nav-link" id="resume-tab" data-toggle="tab" href="#resume">Education</a>
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
