--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div>
                 <ul class="nav nav-tabs nav-fill" id="myTab">
                     <li class="nav-item" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>About</em></strong>">
-                        <a rel="noreferrer" class="nav-link active" id="story-tab" data-toggle="tab" href="#story" aria-hidden="true" >About</a>
+                        <a rel="noreferrer" class="nav-link active" id="story-tab" data-toggle="tab" href="#story" hidden >About</a>
                     </li>
                     <li class="nav-item" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Skill</em></strong>">
                         <a rel="noreferrer" class="nav-link" id="skill-tab" data-toggle="tab" href="#skill">Skill</a>
