--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 
 <head>
     <base href="/">
