--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <base href="/">
+<!--    <base href="/">-->
     <link rel="manifest" href="manifest.json"/>
     <link rel="apple-touch-icon" href="images/Profile-pic.png">
     <meta name="theme-color" content="#242a35"/>
@@ -630,15 +630,15 @@
         <div class="container-ach">
             <div class="box col-lg-4">
                 <h2 class="name">6 ★ in Problem Solving with 3200+ points on HackerRank</h2>
-                <img src="images/HackerRank.webp" class="ach-img" alt="HackerRank"/>
+                <img src="images/HackerRank.webp" class="ach-img" alt="HackerRank" loading="lazy"/>
             </div>
             <div class="box col-lg-4">
                 <h2 class="name">Won <strong>Hacktoberfest 2020</strong> T-shirt by creating more than <strong>20</strong> Pull Request.</h2>
-                <img src="images/hacktoberfest2020.webp" class="ach-img" alt="Hacktoberfest"/>
+                <img src="images/hacktoberfest2020.webp" class="ach-img" alt="Hacktoberfest" loading="lazy"/>
             </div>
             <div class="box col-lg-4">
                 <h2 class="name">Secured <strong>1st</strong> Position Among <strong>66 peers</strong> in Data Science Course.</h2>
-                <img src="images/data-science.webp" class="ach-img" alt="Data Science"/>
+                <img src="images/data-science.webp" class="ach-img" alt="Data Science" loading="lazy"/>
             </div>
         </div>
     </div>
@@ -707,7 +707,7 @@
 </section>
 <footer class="footer bg-light">
     <a rel="noreferrer" aria-label="dev-image" href="https://dev.to/jayantgoel001" target="_blank" class="crayons-footer__mascot" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>DEV</em></strong>">
-        <img  alt="footer" width="52" height="120" src="images/monkey.webp"/>
+        <img  alt="footer" width="52" height="120" src="images/monkey.webp" loading="lazy"/>
     </a>
     <div class="container">
         <div class="row">
@@ -726,7 +726,7 @@
                             <a rel="noreferrer" aria-label="image" href="https://gist.github.com/JayantGoel001/" target="_blank"
                                data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Gists</em></strong>"
                             >
-                                <img src="images/gist.webp" width="20px" height="20px" alt="gist"/>
+                                <img src="images/gist.webp" width="20px" height="20px" alt="gist" loading="lazy"/>
                             </a>
                         </li>
                         <li class="list-inline-item">
